@@ -559,7 +559,7 @@
 </utils>
 <utils apps=animate,composite,convert,display,import,mogrify,montage>
 <lopt>-rotate <degrees>{<}{>}</opt>
-<abs>apply Paeth image rotation to the image</abs>
+<abs>rotate the image</abs>
 </utils>
 <utils apps=convert,display,mogrify>
 <lopt>-sample <geometry></opt>
