@@ -4109,22 +4109,26 @@ A negative <i>x</i> offset rolls the image left-to-right. A negative
 <utils apps=animate,composite,convert,display,import,mogrify,montage>
 <dopt>-rotate <degrees>{<}{>}</opt>
 
-<abs>apply Paeth image rotation to the image</abs>
+<abs>rotate the image</abs>
 
 <pp>
-Use <tt>></tt> to rotate the image only if its width exceeds the height.
-<tt><</tt> rotates the image <i>only</i> if its width is less than the
-height. For example, if you specify <tt>-rotate "-90>"</tt> and the image
-size is 480x640, the image is not rotated.  However, if the
-image is 640x480, it is rotated by -90 degrees.  If you use <tt>></tt> or
-<tt><</tt>, enclose it in quotation marks to prevent it from being
-misinterpreted as a file redirection.</pp>
+Positive angles rotate the image in a clockwise direction while
+negative angles rotate counter-clockwise.</pp>
 
 <pp>
-Empty triangles left over from rotating the image are filled with the color
-defined as <s>background</s> (class <s>backgroundColor</s>).
-The color is specified using the format described under the <s>-fill</s>
-option.</pp>
+Use <tt>></tt> to rotate the image only if its width exceeds the
+height.  <tt><</tt> rotates the image <i>only</i> if its width is less
+than the height. For example, if you specify <tt>-rotate "-90>"</tt>
+and the image size is 480x640, the image is not rotated.  However, if
+the image is 640x480, it is rotated by -90 degrees.  If you use
+<tt>></tt> or <tt><</tt>, enclose it in quotation marks to prevent it
+from being misinterpreted as a file redirection.</pp>
+
+<pp>
+Empty triangles left over from rotating the image are filled with the
+color defined as <s>background</s> (class <s>backgroundColor</s>).
+The color is specified using the format described under the
+<s>-fill</s> option.</pp>
 
 </utils>
 
