@@ -1,4 +1,4 @@
-.TH gm 1 "2009/03/20" "GraphicsMagick"
+.TH gm 1 "2009/04/19" "GraphicsMagick"
 .TP
 .in 15
 .in 15
@@ -3209,20 +3209,23 @@ A negative \fIx\fP offset rolls the image left-to-right. A negative
 \fIy\fP offset rolls the image top-to-bottom.
 .TP
 .B "-rotate \fI<degrees>{<}{>}"\fP
-\fRapply Paeth image rotation to the image
+\fRrotate the image
 
-Use > to rotate the image only if its width exceeds the height.
-< rotates the image \fIonly\fP if its width is less than the
-height. For example, if you specify -rotate "-90>" and the image
-size is 480x640, the image is not rotated.  However, if the
-image is 640x480, it is rotated by -90 degrees.  If you use > or
-<, enclose it in quotation marks to prevent it from being
-misinterpreted as a file redirection.
+Positive angles rotate the image in a clockwise direction while
+negative angles rotate counter-clockwise.
 
-Empty triangles left over from rotating the image are filled with the color
-defined as \fBbackground\fP (class \fBbackgroundColor\fP).
-The color is specified using the format described under the \fB-fill\fP
-option.
+Use > to rotate the image only if its width exceeds the
+height.  < rotates the image \fIonly\fP if its width is less
+than the height. For example, if you specify -rotate "-90>"
+and the image size is 480x640, the image is not rotated.  However, if
+the image is 640x480, it is rotated by -90 degrees.  If you use
+> or <, enclose it in quotation marks to prevent it
+from being misinterpreted as a file redirection.
+
+Empty triangles left over from rotating the image are filled with the
+color defined as \fBbackground\fP (class \fBbackgroundColor\fP).
+The color is specified using the format described under the
+\fB-fill\fP option.
 .TP
 .B "-sample \fI<geometry>"\fP
 \fRscale image using pixel sampling
@@ -3977,7 +3980,7 @@ Options, above.
 \fRperform a X11 remote operation
 .TP
 .B "-rotate \fI<degrees>{<}{>}"\fP
-\fRapply Paeth image rotation to the image
+\fRrotate the image
 .TP
 .B "-sampling-factor \fI<horizontal_factor>x<vertical_factor>"\fP
 \fRchroma subsampling factors
@@ -4548,7 +4551,7 @@ Options, above.
 \fRresize an image
 .TP
 .B "-rotate \fI<degrees>{<}{>}"\fP
-\fRapply Paeth image rotation to the image
+\fRrotate the image
 .TP
 .B "-sampling-factor \fI<horizontal_factor>x<vertical_factor>"\fP
 \fRchroma subsampling factors
@@ -5544,7 +5547,7 @@ Options, above.
 \fRroll an image vertically or horizontally
 .TP
 .B "-rotate \fI<degrees>{<}{>}"\fP
-\fRapply Paeth image rotation to the image
+\fRrotate the image
 .TP
 .B "-sample \fI<geometry>"\fP
 \fRscale image using pixel sampling
@@ -5953,7 +5956,7 @@ Options, above.
 \fRroll an image vertically or horizontally
 .TP
 .B "-rotate \fI<degrees>{<}{>}"\fP
-\fRapply Paeth image rotation to the image
+\fRrotate the image
 .TP
 .B "-sample \fI<geometry>"\fP
 \fRscale image using pixel sampling
@@ -8063,7 +8066,7 @@ Options, above.
 \fRresize an image
 .TP
 .B "-rotate \fI<degrees>{<}{>}"\fP
-\fRapply Paeth image rotation to the image
+\fRrotate the image
 .TP
 .B "-sampling-factor \fI<horizontal_factor>x<vertical_factor>"\fP
 \fRchroma subsampling factors
@@ -8428,7 +8431,7 @@ Options, above.
 \fRroll an image vertically or horizontally
 .TP
 .B "-rotate \fI<degrees>{<}{>}"\fP
-\fRapply Paeth image rotation to the image
+\fRrotate the image
 .TP
 .B "-sample \fI<geometry>"\fP
 \fRscale image using pixel sampling
@@ -8790,7 +8793,7 @@ Options, above.
 \fRresize an image
 .TP
 .B "-rotate \fI<degrees>{<}{>}"\fP
-\fRapply Paeth image rotation to the image
+\fRrotate the image
 .TP
 .B "-sampling-factor \fI<horizontal_factor>x<vertical_factor>"\fP
 \fRchroma subsampling factors
