@@ -21,6 +21,13 @@
 </tr>
 </table>
 <p>
+2009-04-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> doc/options.imdoc: Document the direction of rotation.
+
+</UL>
+<p>
 2009-04-18  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
